fix image alignment

--- a/css/style.css
+++ b/css/style.css
@@ -551,7 +551,8 @@ a {
 .hobbies-image {
     
     height: 100%;
-    object-fit: fill;
+    width: 100%;
+    object-fit: cover;
    
     
 }
